6972540: sun/nio/ch/SocketChannelImpl compilation crashed when executing CompileTheWorld

Reviewed-by: kvn